tetrate/1-lab/ns.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: 1-lab
  labels:
    istio-injection: enabled
